--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+
       <section class="conteiner-nav-bar">
         <nav>
             <div class="logo">
@@ -49,6 +50,18 @@
               </div>
 
         </nav>
+      </section>
+
+      <section class="container-infoDropBox">
+        <div>
+            <h1></h1>
+        </div>
+        <div>
+            <p></p>
+        <div>
+            <img src="" alt="">
+        </div>
+        </div>
       </section>
         
 
