seconda sezione completa

--- a/index.html
+++ b/index.html
@@ -53,15 +53,21 @@
       </section>
 
       <section class="container-infoDropBox">
-        <div>
-            <h1></h1>
+        <div class="title">
+            <h1>TITLE</h1>
         </div>
-        <div>
-            <p></p>
-        <div>
-            <img src="" alt="">
+        <div class="container-bottom">
+            <div class="paragraph">
+                <p></p>
+            </div>    
+            <div class="box-img">
+                <img src="" alt="">
+            </div>
         </div>
-        </div>
+      </section>
+
+      <section class="container-businessPlan">
+        
       </section>
         
 
