aggiunta effetti hover active

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <div class="paragraph">
                 
             <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
-            <a href="#">
+            <a href="#container-businessPlan">
               <button class="start-freeTrial">
                   Inizia la tua prova gratuita
               </button>
